samples/_failures_safe/1761352957_a0da4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_161e2825.c: In function ‘main’:
./samples/SAFE/__tmp_161e2825.c:159:21: error: expected ‘)’ at end of input
  159 |     if (!read_size_t
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_161e2825.c:159:5: error: expected declaration or statement at end of input
  159 |     if (!read_size_t
      |     ^~
